--- a/Contact.html
+++ b/Contact.html
@@ -70,7 +70,7 @@
                             <ul class="navbar-nav d-flex justify-content-end ">
                                 <li class="nav-items"><a class="nav-link" href="index.html">Home</a></li>
                                 <li class="nav-items"><a class="nav-link" href="About.html">About</a></li>
-                                <li class="nav-items"><a class="nav-link" href=Menu.html">Menu</a></li>
+                                <li class="nav-items"><a class="nav-link" href="Menu.html">Menu</a></li>
                                 <li class="nav-items"><a class="nav-link" href="Blog.html">Stories</a></li>
                                 <li class="nav-items"><a class="nav-link" href="Contact.html">Contact</a></li>
                             </ul>
